# VegaOS

./: .gitignore  LICENSE  Makefile.in  README  README.md  configure  configure.ac
.github/workflows/: mkimg.yml
conf/: limine.cfg  link-aarch64.ld  link-x86_64.ld  link.ld
sys/dev/video/: fb.c
sys/include/pty/: core.h
sys/include/sys/: cdefs.h  limine.h
sys/kern/: init.c  printk.c
sys/kernel/aarch64/: exceptions.s  mmio.c  pal.s
sys/kernel/aarch64/mm/: mmu.c  mmu.s
sys/kernel/amd64/: exceptions.c  gdt.c  idt.c
sys/kernel/core/: bitmap.c  init.c  panic.c  printk.c
sys/kernel/dev/irqchip/: bcm2835.c
sys/kernel/include/aarch64/: cpu.h  exceptions.h  mmio.h
sys/kernel/include/aarch64/mm/: mmu.h
sys/kernel/include/amd64/: exceptions.h  gdt.h  idt.h
sys/kernel/include/dev/irqchip/: bcm2835.h
sys/kernel/include/dev/video/: fb.h
sys/kernel/include/mm/: pagesize.h  pmm.h  vmm.h
sys/kernel/include/posix/: stdarg.h  string.h
sys/kernel/include/pty/: core.h  font.h
sys/kernel/include/sys/: bitmap.h  bug.h  cdefs.h  kaddr.h  math.h  module.h  pal.h  panic.h  printk.h  types.h
sys/kernel/mm/: hddm.c  pmm.c  vmm.c  vmm_aarch64.c  vmm_aarch64.s  vmm_amd64.c  vmm_amd64.s  vmm_hddm.c
sys/kernel/posix/: memcpy.c  memset.c
sys/kernel/pty/: core.c  font.c
sys/kernel/utils/: bitmap.c
sys/pty/: core.c  font.c
tools/: cross.sh
